--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Customisable</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Customisable</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 	<script src="https://kit.fontawesome.com/de13d23169.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,10 @@
 		<div class="sidebar">
 			<ul class="sidebar-list no-style">
 				<li>
-					<a href="google.com">Animation</a>
+					<a page="info" href="introduction.html">Basic Information</a>
+				</li>
+				<li>
+					<a page="anim" href="animations/main.html">Animation</a>
 				</li>
 			</ul>
 		</div>
@@ -27,7 +30,7 @@
 					<a href="#">Basic Information</a>
 				</li>
 				<li>
-					<a href="#">Discord</a>
+					<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
 				</li>
 			</ul>
 			</div>
