--- a/animations/main.html
+++ b/animations/main.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Customisable</title>
-  <link href="/style.css" rel="stylesheet" type="text/css" />
+  <link href="../style.css" rel="stylesheet" type="text/css" />
 	<script src="https://kit.fontawesome.com/de13d23169.js" crossorigin="anonymous"></script>
 </head>
 
