--- a/animations/main.html
+++ b/animations/main.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="header">
 			<div id="logo">
-				CUSTOMISABLE | A Blockbench Theme
+				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
 			</div>
 			<ul class="nav-list no-style">
 				<li>
