--- a/animations/main.html
+++ b/animations/main.html
@@ -35,6 +35,8 @@
 			</ul>
 			</div>
 	</header>
+	<h1> HELLO THERE </h1>
+	<p>paragrpah of text yay</p>
   <script src="../script.js"></script>
 </body>
 </html>
