--- a/animations/main.html
+++ b/animations/main.html
@@ -35,8 +35,10 @@
 			</ul>
 			</div>
 	</header>
-	<h1> HELLO THERE </h1>
-	<p>paragrpah of text yay</p>
+	<div id="content">
+		<h1> HELLO THERE </h1>
+		<p>paragrpah of text yay</p>
+	</div>
   <script src="../script.js"></script>
 </body>
 </html>
