--- a/animations/main.html
+++ b/animations/main.html
@@ -36,8 +36,15 @@
 			</div>
 	</header>
 	<div id="content">
-		<h1> HELLO THERE </h1>
-		<p>paragrpah of text yay</p>
+		<h1>Animations</h1>
+		<hr></hr>
+		<p>Currently supported animations:</p>
+		<ul>
+			<li>
+				<h5>fadeIn</h5>
+				<p>element fades in from opacity:0 </p>
+			</li>
+		</ul>
 	</div>
   <script src="../script.js"></script>
 </body>
