--- a/animations/main.html
+++ b/animations/main.html
@@ -38,10 +38,10 @@
 	<div id="content">
 		<h1>Animations</h1>
 		<hr></hr>
-		<p>Currently supported animations:</p>
+		<h2>Currently supported animations:</h2>
 		<ul>
 			<li>
-				<h5>fadeIn</h5>
+				<h3>fadeIn</h3>
 				<p>element fades in from opacity:0 </p>
 			</li>
 		</ul>
