--- a/animations/main.html
+++ b/animations/main.html
@@ -38,13 +38,40 @@
 	<div id="content">
 		<h1>Animations</h1>
 		<hr></hr>
-		<h2>Currently supported animations:</h2>
+		<h2>Animation Names:</h2>
 		<ul>
 			<li>
-				<h3>fadeIn</h3>
-				<p>element fades in from opacity:0 </p>
+				<h3 anim="fadein">fadeIn</h3>
+				<p>opacity changes from completely transparent to solid</p>
+			</li>
+			<li>
+				<h3 anim="scalein">scaleIn</h3>
+				<p>size changes from 0 to normal size</p>
+			</li>
+			
+			<li>
+				<h3 anim="scaledown">scaleDown</h3>
+				<p>height changes from 0 to normal size, while width stays the same</p>
+			</li>
+			<li>
+				<h3 anim="floatdown">floatDown1/2</h3>
+				<p>position moves down from above, use floatDown2 for opacity change</p>
+			</li>
+			<li>
+				<h3 anim="floatup">floatUp1/2</h3>
+				<p>position up down from below, use floatUp2 for opacity change</p>
+			</li>
+			<li>
+				<h3 anim="floatleft">floatLeft1/2</h3>
+				<p>position left down from right, use floatLeft2 for opacity change</p>
+			</li>
+			<li>
+				<h3 anim="floatright">floatRight1/2</h3>
+				<p>position right down from left, use floatRight2 for opacity change</p>
 			</li>
 		</ul>
+		<h2>Timing Function Names:</h2>
+		<p>All default timings, as well as some custom</p>
 	</div>
   <script src="../script.js"></script>
 </body>
