--- a/animations/main.html
+++ b/animations/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -10,30 +9,30 @@
 </head>
 
 <body>
-  <header>
-		<div class="sidebar">
-			<ul class="sidebar-list no-style">
-				<li>
-					<a page="info" href="introduction.html">Basic Information</a>
-				</li>
-				<li>
-					<a page="anim" href="animations/main.html">Animation</a>
-				</li>
-			</ul>
-		</div>
+	<header>
 		<div class="header">
 			<div id="logo">
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
-			</div>
-			<ul class="nav-list no-style">
-				<li>
+		  	</div>
+		  	<ul class="nav-list no-style">
+			  	<li>
 					<a href="#">Basic Information</a>
-				</li>
+			  	</li>
+			  	<li>
+				  	<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
+			  	</li>
+		  	</ul>
+	  	</div>
+	  	<div class="sidebar">
+			<ul class="sidebar-list no-style">
 				<li>
-					<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
-				</li>
-			</ul>
-			</div>
+					<a page="info" href="main/introduction.html">Basic Information</a>
+			  	</li>
+			  	<li>
+				  	<a page="anim" href="main/animations/main.html">Animation</a>
+			  	</li>
+		  	</ul>
+	  	</div>
 	</header>
 	<div id="content">
 		<h1>Animations</h1>
