--- a/introduction.html
+++ b/introduction.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Customisable</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="../style.css" rel="stylesheet" type="text/css" />
 	<script src="https://kit.fontawesome.com/de13d23169.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header>
-		<div class="sidebar">
-			<ul class="sidebar-list no-style">
-				<li>
-					<a page="info" href="introduction.html">Basic Information</a>
-				</li>
-				<li>
-					<a page="anim" href="animations/main.html">Animation</a>
-				</li>
-			</ul>
-		</div>
+	<header>
 		<div class="header">
 			<div id="logo">
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
-			</div>
-			<ul class="nav-list no-style">
-				<li>
+		  	</div>
+		  	<ul class="nav-list no-style">
+			  	<li>
 					<a href="#">Basic Information</a>
-				</li>
+			  	</li>
+			  	<li>
+				  	<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
+			  	</li>
+		  	</ul>
+	  	</div>
+	  	<div class="sidebar">
+			<ul class="sidebar-list no-style">
 				<li>
-					<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
-				</li>
-			</ul>
-			</div>
+					<a page="info" href="main/introduction.html">Basic Information</a>
+			  	</li>
+			  	<li>
+				  	<a page="anim" href="main/animations/main.html">Animation</a>
+			  	</li>
+		  	</ul>
+	  	</div>
 	</header>
 	<div id="content">
-		<h1>Using Customisable</h1>
-    <hr></hr>
-    <p>To use:</p>
-		<h2>Currently supported animations:</h2>
-		<ul>
-			<li>
-				<h3>fadeIn</h3>
-				<p>element fades in from opacity:0 </p>
-			</li>
-		</ul>
+		<h1>Page Title</h1>
+		<hr></hr>
+		<h2>Subheading:</h2>
 	</div>
-  <script src="../script.js"></script>
+  <script src="main/script.js"></script>
 </body>
 </html>
