--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Customisable</title>
-	<link href="../style.css" rel="stylesheet" type="text/css" />
+	<link href="style.css" rel="stylesheet" type="text/css" />
 	<script src="https://kit.fontawesome.com/de13d23169.js" crossorigin="anonymous"></script>
 </head>
 
@@ -39,6 +39,6 @@
 		<hr></hr>
 		<h2>Subheading:</h2>
 	</div>
-	<script src="main/script.js"></script>
+	<script src="script.js"></script>
 	</body>
 </html>
