--- a/animations/main.html
+++ b/animations/main.html
@@ -58,15 +58,20 @@
 			</li>
 			<li>
 				<h3 anim="floatup">floatUp1/2</h3>
-				<p>position up down from below, use floatUp2 for opacity change</p>
+				<p>position moves up from below, use floatUp2 for opacity change</p>
 			</li>
 			<li>
 				<h3 anim="floatleft">floatLeft1/2</h3>
-				<p>position left down from right, use floatLeft2 for opacity change</p>
+				<p>position moves left from right, use floatLeft2 for opacity change</p>
 			</li>
 			<li>
 				<h3 anim="floatright">floatRight1/2</h3>
-				<p>position right down from left, use floatRight2 for opacity change</p>
+				<p>position moves right from left, use floatRight2 for opacity change</p>
+			</li>
+			<hr></hr>
+			<li>
+				<h3 anim="scaleup">scaleUp</h3>
+				<p>size of element increases by fixed value</p>
 			</li>
 		</ul>
 		<h2>Timing Function Names:</h2>
