--- a/animations/main.html
+++ b/animations/main.html
@@ -75,8 +75,15 @@
 			</li>
 		</ul>
 		<h2>Timing Function Names:</h2>
-		<p>All default timings, as well as some custom</p>
+		<p>Default timing functions can be found </p>
+		<a href="https://www.w3schools.com/cssref/playit.asp?filename=playcss_animation-timing-function&preval=linear">here</a>
+		<ul>
+			<li>
+				<h3>bounce1</h3>
+				<p>the animation will play past the endpoint, the bounce back</p>
+			</li>
+		</ul>
 	</div>
-  <script src="../script.js"></script>
+	<script src="../script.js"></script>
 </body>
 </html>
