--- a/animations/main.html
+++ b/animations/main.html
@@ -77,6 +77,7 @@
 		<h2>Timing Function Names:</h2>
 		<p>Default timing functions can be found </p>
 		<a href="https://www.w3schools.com/cssref/playit.asp?filename=playcss_animation-timing-function&preval=linear">here</a>
+		<p>Please note custom timing functions must be formatted: var(--<b>name</b>)</p>
 		<ul>
 			<li>
 				<h3>bounce1</h3>
