--- a/animations/main.html
+++ b/animations/main.html
@@ -6,5 +6,5 @@
 <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 <script>
-	location.href = "https://tictac7126.github.io/customisable/animations/main.html"
+	location.href = "https://tictac7126.github.io/customisable/animations"
 </script>
