--- a/template.html
+++ b/template.html
@@ -12,6 +12,7 @@
 	<header>
 		<div class="header">
 			<div id="logo">
+				<i class="fa-solid fa-bars"></i>
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
 			</div>
 			<ul class="nav-list no-style">
