--- a/index.html
+++ b/index.html
@@ -11,18 +11,9 @@
 
 <body>
   <header>
-		<div class="sidebar">
-			<ul class="sidebar-list no-style">
-				<li>
-					<a page="info" href="introduction.html">Basic Information</a>
-				</li>
-				<li>
-					<a page="anim" href="animations/main.html">Animation</a>
-				</li>
-			</ul>
-		</div>
 		<div class="header">
 			<div id="logo">
+				<i class="fa-solid fa-bars"></i>
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
 			</div>
 			<ul class="nav-list no-style">
@@ -33,7 +24,17 @@
 					<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
 				</li>
 			</ul>
-			</div>
+		</div>
+	  	<div class="sidebar">
+			<ul class="sidebar-list no-style">
+				<li>
+					<a page="info" href="introduction.html">Basic Information</a>
+				</li>
+				<li>
+					<a page="anim" href="animations/main.html">Animation</a>
+				</li>
+			</ul>
+		</div>
 	</header>
   <script src="script.js"></script>
 </body>
