--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
 		<div class="header">
 			<div id="logo">
-				<i class="fa-solid fa-bars"></i>
+				<i class="fa-solid fa-bars menu-toggle" onclick="toggleMenu()"></i>
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
 			</div>
 			<ul class="nav-list no-style">
