➕ Added more animations to list

--- a/animations/index.html
+++ b/animations/index.html
@@ -14,32 +14,34 @@
 			<div id="logo">
 				<i class="fa-solid fa-bars menu-toggle" onclick="toggleMenu()"></i>
 				<a href="index.html">CUSTOMISABLE | A Blockbench Theme</a>
-		  	</div>
-		  	<ul class="nav-list no-style">
-			  	<li>
+			</div>
+			<ul class="nav-list no-style">
+				<li>
 					<a href="#">Basic Information</a>
-			  	</li>
-			  	<li>
-				  	<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
-			  	</li>
-		  	</ul>
-	  	</div>
-	  	<div class="sidebar">
+				</li>
+				<li>
+					<a href="https://discord.gg/CvZBV2F2Ya" target="_blank">Discord</a>
+				</li>
+			</ul>
+		</div>
+		<div class="sidebar">
 			<ul class="sidebar-list no-style">
 				<li>
 					<a page="info" href="main/introduction.html">Basic Information</a>
-			  	</li>
-			  	<li>
-				  	<a page="anim" href="main/animations/main.html">Animation</a>
-			  	</li>
-		  	</ul>
-	  	</div>
+				</li>
+				<li>
+					<a page="anim" href="main/animations/main.html">Animation</a>
+				</li>
+			</ul>
+		</div>
 	</header>
 	<div id="content">
 		<h1>Animations</h1>
-		<hr></hr>
+		<hr>
 		<h2>Animation Names:</h2>
 		<ul>
+			<h2>Context Menu</h2>
+			<p>animation categories are just guidlines</p>
 			<li>
 				<h3 anim="fadein">fadeIn</h3>
 				<p>opacity changes from completely transparent to solid</p>
@@ -69,10 +71,17 @@
 				<h3 anim="floatright">floatRight1/2</h3>
 				<p>position moves right from left, use floatRight2 for opacity change</p>
 			</li>
-			<hr></hr>
+			<h2>Context Menu Items</h2>
+			<hr>
 			<li>
 				<h3 anim="scaleup">scaleUp</h3>
 				<p>size of element increases by fixed value</p>
+			</li>
+			<h2>Dialog Sidebar</h2>
+			<hr>
+			<li>
+				<h3 anim="slideRight">slideRight</h3>
+				<p>Element slides from left to right</p>
 			</li>
 		</ul>
 		<h2>Timing Function Names:</h2>
