--- a/animations/index.html
+++ b/animations/index.html
@@ -39,9 +39,10 @@
 		<h1>Animations</h1>
 		<hr>
 		<h2>Animation Names:</h2>
+		<p>(animation categories are just guidlines)</p>
 		<ul>
-			<h2>Context Menu</h2>
-			<p>animation categories are just guidlines</p>
+			<h2>Context Menu Animations</h2>
+			<hr>
 			<li>
 				<h3 anim="fadein">fadeIn</h3>
 				<p>opacity changes from completely transparent to solid</p>
@@ -71,13 +72,13 @@
 				<h3 anim="floatright">floatRight1/2</h3>
 				<p>position moves right from left, use floatRight2 for opacity change</p>
 			</li>
-			<h2>Context Menu Items</h2>
+			<h2>Menu Item Animations</h2>
 			<hr>
 			<li>
 				<h3 anim="scaleup">scaleUp</h3>
 				<p>size of element increases by fixed value</p>
 			</li>
-			<h2>Dialog Sidebar</h2>
+			<h2>Dialog Sidebar Animations</h2>
 			<hr>
 			<li>
 				<h3 anim="slideRight">slideRight</h3>
