--- a/animations/index.html
+++ b/animations/index.html
@@ -92,8 +92,11 @@
 		<ul>
 			<li>
 				<h3>bounce1</h3>
-				<p>the animation will play past the endpoint, the bounce back</p>
+				<a href="https://cubic-bezier.com/?#.35,.25,.79,1.59">demo</a>
 			</li>
+			<li>
+				<h3>weird</h3>
+				<a href="https://cubic-bezier.com/?#.38,-0.63,.69,1.63">demo</a>
 		</ul>
 	</div>
 	<script src="../script.js"></script>
